<resources>
    <string name="app_name">CallBoard</string>

    <!-- Menu Drawer Strings -->
    <string name="ad_cat">Объявления</string>
    <string name="ad_my_ads">Мои объявления</string>
    <string name="ad_car">Машины</string>
    <string name="ad_pc">Компьютеры</string>
    <string name="ad_smartphone">Смартфоны</string>
    <string name="ad_domestic">Бытовая техника</string>
    <string name="aс_cat">Аккаунт</string>
    <string name="aс_sign_up">Регистрация</string>
    <string name="aс_sign_in">Вход</string>
    <string name="aс_sign_out">Выход</string>

    <string name="open">Открыть</string>
    <string name="close">Закрыть</string>
    <string name="not_sign">Войдите или зарегистрируйтесь</string>

    <!-- Sign Dialog -->
    <string name="email_hint">Email</string>
    <string name="email_reset_password_was_sent">Ссылка для сброса пароля была отправлена на почту</string>
    <string name="password_hint">Password</string>
    <string name="sign_in_action">Войти</string>
    <string name="sign_up_action">Зарегистрироваться</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="sign_up_error">Не удалось зарегистрироваться</string>
    <string name="reset_password_error">Не удалось отправить ссылку для восстановления пароля по данному Email</string>
    <string name="sign_in_error">Не удалось войти</string>
    <string name="send_verification_email_error">Не удалось отправить письмо для подтверждения</string>
    <string name="send_verification_email_done">На вашу почту было отправлено письмо для подтверждения</string>
    <string name="dialog_reset_email_message">Для восстановления пароля укажите Email адрес</string>
    <string name="bind_done">Email привязан к Google аккаунту</string>
    <string name="enter_google">У вас уже есть аккаунт с таким Email, войдите через Google</string>

    <!-- Edit Activity -->
    <string name="select_country">Выберите страну</string>
    <string name="select_city">Выберите город</string>
</resources>