<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/ad_cat">
        <menu>
            <item
                android:id="@+id/my_ads"
                android:title="@string/ad_my_ads" />

            <item
                android:id="@+id/car"
                android:title="@string/ad_car" />

            <item
                android:id="@+id/pc"
                android:title="@string/ad_pc" />

            <item
                android:id="@+id/smartphone"
                android:title="@string/ad_smartphone" />

            <item
                android:id="@+id/domestic"
                android:title="@string/ad_domestic" />

        </menu>
    </item>

    <item android:title="@string/aс_cat">
        <menu>
            <item
                android:id="@+id/sign_up"
                android:title="@string/aс_sign_up" />

            <item
                android:id="@+id/sign_in"
                android:title="@string/aс_sign_in" />

            <item
                android:id="@+id/sign_out"
                android:title="@string/aс_sign_out" />

        </menu>
    </item>
</menu>