<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="16dp">

    <TextView
        android:id="@+id/tv_sign_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aс_sign_up"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etSignEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogMessage" />

    <EditText
        android:id="@+id/etSignPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/etSignEmail" />

    <Button
        android:id="@+id/btnSignUpIn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up_action"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/etSignPassword" />

    <Button
        android:id="@+id/btnForgetPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/forget_password"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpIn" />

    <TextView
        android:id="@+id/tvDialogMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:text="@string/dialog_reset_email_message"
        android:textColor="@color/red"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/etSignEmail"
        app:layout_constraintStart_toStartOf="@+id/etSignEmail"
        app:layout_constraintTop_toBottomOf="@+id/tv_sign_title" />
</androidx.constraintlayout.widget.ConstraintLayout>